kubernetes-manifests/frappe-namespace.yaml
# namespaces/frappe-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frappe
