kubernetes-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frappe
  labels:
    app: frontend
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: frontend
