kubernetes-manifests/queue-long-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-long
  namespace: frappe
spec:
  selector:
    app: queue-long
  ports:
  - port: 8000
    targetPort: 8000
