kubernetes-manifests/queue-short-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-short
  namespace: frappe
spec:
  selector:
    app: queue-short
  ports:
  - port: 8000
    targetPort: 8000
