kubernetes-manifests/redis-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: frappe
  labels:
    app: redis-cache
spec:
  ports:
  - port: 6379
    name: redis
  clusterIP: None
  selector:
    app: redis-cache
