kubernetes-manifests/redis-queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-queue
  namespace: frappe
  labels:
    app: redis-queue
spec:
  ports:
  - port: 6379
    name: redis
  clusterIP: None
  selector:
    app: redis-queue
