kubernetes-manifests/schedular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: frappe
spec:
  selector:
    app: scheduler
  ports:
  - port: 8000
    targetPort: 8000
