kubernetes-manifests/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket
  namespace: frappe
spec:
  selector:
    app: websocket
  ports:
  - port: 9000
    targetPort: 9000
    name: socketio
