kubernetes-manifests/frappe-ingress.yaml
# ingress/frappe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frappe-ingress
  namespace: frappe
  annotations:
    kubernetes.io/ingressClassName: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - erpnext.azanyinc.com
    - payment.azanyinc.com

    secretName: frappe-tls
  rules:
  - host: erpnext.azanyinc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
  - host: payment.azanyinc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
